--- a/templates/order/contract_document.html
+++ b/templates/order/contract_document.html
@@ -4,6 +4,9 @@
 
 {% block head %}
     <style>
+        .navbar {
+                height: 130px !important; /* 设置高度并使用 !important 确保样式生效 */
+            }
         .contract-document-container{max-width:900px;margin:20px auto;background-color:#fff;padding:30px;border:1px solid #dee2e6;box-shadow:0 0 10px rgba(0,0,0,0.1)}
         .contract-document-container .contract-document-container{background:none;box-shadow:none;border:none;padding:0;margin:0}
         .contract-actions{margin-top:20px;text-align:center}
