--- a/templates/feedback/complaint.html
+++ b/templates/feedback/complaint.html
@@ -22,7 +22,7 @@
         <div id="complaint-fields">
             <div class="form-group" style="position:relative;">
                 <label for="receiver">被投诉人（可选）：</label>
-                <input type="text" name="receiver" id="receiver" placeholder="如房东用户名、管理员等" class="animated-input" autocomplete="off">
+                <input type="text" name="receiver" id="receiver" placeholder="请输入被投诉人用户名" class="animated-input" autocomplete="off">
                 <div id="receiver-autocomplete" class="autocomplete-list"></div>
                 <div id="receiver-type" class="receiver-type-tip"></div>
             </div>
