解决订单处时间问题

--- a/templates/order/contract_history.html
+++ b/templates/order/contract_history.html
@@ -173,7 +173,7 @@
             </div>
         {% endif %}
     </div>
-    <script src="{{ url_for('static', filename='js/common/message-toast.js') }}"></script>
+{#    <script src="{{ url_for('static', filename='js/common/message-toast.js') }}"></script>#}
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             // 为房屋链接添加点击提示
