这是保留历史的版本，去除api敏感信息

--- a/templates/house/house_detail.html
+++ b/templates/house/house_detail.html
@@ -232,7 +232,7 @@
     </div>
 
     <!-- 百度地图API -->
-    <script type="text/javascript" src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=tG45XJla84SWiND3VIKh7UlHFdb0scGH"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=xxx"></script>
     
     <!-- 页面初始化脚本 -->
     <script>
